--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,8 @@
             </div>
             <button type="submit" class="btn btn-dark">Login</button>
           </form>
-          <h3>Note : If You haven't registered yet , please register here :
+          <h3>Note : If You have already registered , so you are redirected here.</h3>
+          <h3>If you haven't registered , please register here :
             <button class="btn btn-dark"  role="link">
                 <a class="btn btn-block" href="/interestedtopic">SignUp</a>
             </button>
