--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,7 +44,7 @@
             <div class="col-lg-4">
               <div class="post-box">
                 <h3 class="post-title"><%= ques.heading %></h3>
-                <a href="blog-singe.html" class="readmore stretched-link mt-auto"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
+                <a href="/questions/<%=ques._id%>" class="readmore stretched-link mt-auto"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
          <% }) %>
