--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -57,7 +57,17 @@
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <% if(ok) { %>
-            <li><a class="getstarted scrollto" href="/logout"> LOGOUT </a></li>
+            <li class="dropdown"><a href="#"><span>
+              Hello! , 
+              <% if(ok.fname) { %> 
+                <%=ok.fname.toUpperCase()%>
+                <% }else { %>
+                  <%=ok.username.substr(0 , 8).toUpperCase()%>
+                  <% } %> 
+            </span> <i class="bi bi-chevron-down"></i></a>
+              <ul>
+                <li><a class="getstarted scrollto" href="/logout"> LOGOUT </a></li>                                
+              </ul>           
          <% }else { %>
             <li><a class="getstarted scrollto" href="/login"> LOGIN </a></li>       
           <% } %> 
