add voting section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,11 +25,6 @@
   </section><!-- End Hero -->
 
   <main id="main">
-    <!-- ======= About Section ======= -->
-    
-
-
-    <!-- ======= Recent Blog Posts Section ======= -->
     <section id="recent-blog-posts" class="recent-blog-posts">
 
       <div class="container" data-aos="fade-up">
@@ -70,7 +65,7 @@
                 <i class="ri-discuss-line icon"></i>
                 <h3>Web Development</h3>
                 <p>Web programming, also known as web development, is the creation of dynamic web applications.</p>
-                <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                <a href="/questions/topics/Web Development" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
   
@@ -79,7 +74,7 @@
                 <i class="ri-discuss-line icon"></i>
                 <h3>App Development</h3>
                 <p>Mobile application development is the process to making software for smartphones and digital assistants, most commonly for Android and iOS.</p>
-                <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                <a href="/questions/topics/App Development" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
   
@@ -88,7 +83,7 @@
                 <i class="ri-discuss-line icon"></i>
                 <h3>Data Structures And Algorithms</h3>
                 <p>Data Structure is a way of collecting and organising data in such a way that we can perform operations on these data in an effective way.</p>
-                <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                <a href="/questions/topics/DSA" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
   
@@ -98,7 +93,7 @@
                 <h3>Competitive Programming</h3>
                 <p>
                     Competitive programmers use their knowledge of algorithms and data structures and logical reasoning skills.</p>
-                <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                <a href="/questions/topics/Competitive Programming" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
   
@@ -107,7 +102,7 @@
                 <i class="ri-discuss-line icon"></i>
                 <h3>Semester</h3>
                 <p>a half-year term in a school or university, especially in North America, typically lasting for fifteen to eighteen weeks.</p>
-                <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                <a href="/questions/topics/Semester" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
   
@@ -116,7 +111,7 @@
                 <i class="ri-discuss-line icon"></i>
                 <h3>Others/Entertainment</h3>
                 <p>the action of providing or being provided with amusement or enjoyment.</p>                
-                <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                <a href="/questions/topics/Others.." class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
   
