--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -27,7 +27,8 @@
                     <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
                   </div>
   
-                  <div class="col-md-12 text-center">  
+                  <div class="col-md-12 text-center" id="contactus-Submit"> 
+                    <!-- <div class="sent-message">Your message has been sent. Thank you!</div>  -->
                     <button type="submit">Send Message</button>
                   </div>
   
