--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,12 @@
 <%- include("partials/header" , {ok : login}); -%>
-<h1>TO contact me :</h1>
-<h1>Mail me at : prashantnk2001@gmail.com</h1>
-<br>
-<h1>or whatsapp at  : 9430650271</h1>
-<%- include("./partials/footer.ejs"); -%>
+    <main id="main">
+        <section class="breadcrumbs">
+            <div class="container">
+                <h1>TO contact me :</h1>
+                <h1>Mail me at : prashantnk2001@gmail.com</h1>
+                <br>
+                <h1>or whatsapp at : 9430650271</h1>
+            </div>
+        </section>
+    </main>
+    <%- include("./partials/footer.ejs"); -%>
