--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,128 +1,132 @@
-      <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact">
+<!-- ======= Contact Section ======= -->
+<section id="contact" class="contact">
 
-        <div class="container" data-aos="fade-up" id="container-up">
-  
-          <header class="section-header">
-            <h2>Contact</h2>
-            <p>Contact Us</p>
-          </header>
-            <div class="col-lg-6" id="main-contact">
-              <form action="/contact" method="post" class="php-email-form">
-                <div class="row gy-4">
-  
-                  <div class="col-md-6">
-                    <input type="text" name="name" class="form-control" placeholder="Your Name" required>
-                  </div>
-  
-                  <div class="col-md-6 ">
-                    <input type="email" class="form-control" name="email" placeholder="Your Email" required>
-                  </div>
-  
-                  <div class="col-md-12">
-                    <input type="text" class="form-control" name="subject" placeholder="Subject" required>
-                  </div>
-  
-                  <div class="col-md-12">
-                    <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
-                  </div>
-  
-                  <div class="col-md-12 text-center" id="contactus-Submit"> 
-                    <!-- <div class="sent-message">Your message has been sent. Thank you!</div>  -->
-                    <button type="submit">Send Message</button>
-                  </div>
-  
-                </div>
-              </form>
-  
-            </div>
-          </div>
-  
-      </section><!-- End Contact Section -->
-  
-    </main><!-- End #main -->
-  
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
+  <div class="container" data-aos="fade-up" id="container-up">
 
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-12 text-center">
-            <h4>Our Newsletter</h4>
-            <p>To Get Latest Update , You Can Subcribe Us !</p>
-          </div>
-          <div class="col-lg-6">
-            <form action="/subscribe" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
+    <header class="section-header">
+      <h2>Contact</h2>
+      <p>Contact Us</p>
+    </header>
+    <div class="col-lg-6" id="main-contact">
+      <form action="/contact" method="post" class="php-email-form">
+        <div class="row gy-4">
 
-    <div class="footer-top">
-      <div class="container">
-        <div class="row gy-4" id = "footer-main">
-          <div class="col-lg-5 col-md-12 footer-info">
-            <a href="/" class="logo d-flex align-items-center">
-              <img src="http://nitrr.ac.in/images/nitrr.gif" alt="">
-              <span>ASKNITRR</span>
-            </a>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-            <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram bx bxl-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin bx bxl-linkedin"></i></a>
-            </div>
+          <div class="col-md-6">
+            <input type="text" name="name" class="form-control" placeholder="Your Name" required>
           </div>
 
-          <div class="col-lg-2 col-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="/">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="/#about">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="/newquestion">Ask Query</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
+          <div class="col-md-6 ">
+            <input type="email" class="form-control" name="email" placeholder="Your Email" required>
           </div>
 
-          <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-            <h4>Contact Us</h4>
-              <strong>Email:</strong> prashantnk2001@gmail.com<br>
-            </p>
+          <div class="col-md-12">
+            <input type="text" class="form-control" name="subject" placeholder="Subject" required>
+          </div>
 
+          <div class="col-md-12">
+            <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
+          </div>
+
+          <div class="col-md-12 text-center" id="contactus-Submit">
+            <!-- <div class="sent-message">Your message has been sent. Thank you!</div>  -->
+            <button type="submit">Send Message</button>
           </div>
 
         </div>
-      </div>
-    </div>
+      </form>
 
+    </div>
+  </div>
+
+</section><!-- End Contact Section -->
+
+</main><!-- End #main -->
+
+<!-- ======= Footer ======= -->
+<footer id="footer" class="footer">
+
+  <div class="footer-newsletter">
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>ASKNITRR</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        Made by : Prashant Ranjan
+      <div class="row justify-content-center">
+        <div class="col-lg-12 text-center">
+          <h4>Our Newsletter</h4>
+          <p>To Get Latest Update , You Can Subcribe Us !</p>
+        </div>
+        <div class="col-lg-6">
+          <form action="/subscribe" method="post">
+            <input type="email" name="email"><input type="submit" value="Subscribe">
+          </form>
+        </div>
       </div>
     </div>
-  </footer><!-- End Footer -->
+  </div>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <div class="footer-top">
+    <div class="container">
+      <div class="row gy-4" id="footer-main">
+        <div class="col-lg-5 col-md-12 footer-info">
+          <a href="/" class="logo d-flex align-items-center">
+            <img src="http://nitrr.ac.in/images/nitrr.gif" alt="">
+            <span>ASKNITRR</span>
+          </a>
+          <!-- <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta
+            donna mare fermentum iaculis eu non diam phasellus.</p> -->
 
-  <!-- Vendor JS Files -->
-  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
-  <script src="/assets/vendor/aos/aos.js"></script>
-  <script src="/assets/vendor/php-email-form/validate.js"></script>
-  <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/assets/vendor/purecounter/purecounter.js"></script>
-  <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
+        </div>
 
-  <!-- Template Main JS File -->
-  <script src="/assets/js/main.js"></script>
+        <div class="col-lg-2 col-6 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><i class="bi bi-chevron-right"></i> <a href="/">Home</a></li>
+            <!-- <li><i class="bi bi-chevron-right"></i> <a href="/#about">About us</a></li> -->
+            <li><i class="bi bi-chevron-right"></i> <a href="/newquestion">Ask Query</a></li>
+            <!-- <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
+          </ul>
+        </div>
+
+        <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
+          <h4>Contact Us</h4>
+          <strong>Email:</strong> prashantnk2001@gmail.com<br>
+          </p>
+          <div class="social-links mt-3">
+            <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
+            <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
+            <!-- <a href="#" class="instagram"><i class="bi bi-instagram bx bxl-instagram"></i></a> -->
+            <a href="https://www.linkedin.com/in/prashant-ranjan-b44899b3/" class="linkedin"><i
+                class="bi bi-linkedin bx bxl-linkedin"></i></a>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="copyright">
+      &copy; Copyright <strong><span>ASKNITRR</span></strong>. All Rights Reserved
+    </div>
+    <div class="credits">
+      Made by : Prashant Ranjan
+    </div>
+  </div>
+</footer><!-- End Footer -->
+
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+    class="bi bi-arrow-up-short"></i></a>
+
+<!-- Vendor JS Files -->
+<script src="/assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
+<script src="/assets/vendor/aos/aos.js"></script>
+<script src="/assets/vendor/php-email-form/validate.js"></script>
+<script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="/assets/vendor/purecounter/purecounter.js"></script>
+<script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
+
+<!-- Template Main JS File -->
+<script src="/assets/js/main.js"></script>
 
 </body>
 
