--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,9 +11,11 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link rel = "icon" href =  "http://nitrr.ac.in/images/nitrr.gif" type = "image/x-icon"> 
+  <link rel="icon" href="http://nitrr.ac.in/images/nitrr.gif" type="image/x-icon">
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +24,9 @@
   <link href="/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+    crossorigin="anonymous" />
   <!-- Template Main CSS File -->
   <link href="/assets/css/style.css" rel="stylesheet">
   <link href="/assets/css/mystyle.css" rel="stylesheet">
@@ -41,7 +45,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="/">Home</a></li>
+          <li><a class="nav-link scrollto" href="/">Home</a></li>
           <li><a class="nav-link scrollto" href="/questions">All Questions</a></li>
           <li><a class="nav-link scrollto" href="/newquestion">Ask Query</a></li>
           <li class="dropdown"><a href="#"><span>Topics</span> <i class="bi bi-chevron-down"></i></a>
@@ -51,29 +55,29 @@
               <li><a href="/questions/topics/DSA">Data Structures And Algo</a></li>
               <li><a href="/questions/topics/App Development">App Development</a></li>
               <li><a href="/questions/topics/Semester">Semester</a></li>
-              <li><a href="/questions/topics/Others..">Others</a></li>              
+              <li><a href="/questions/topics/Others..">Others</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <% if(ok) { %>
             <li class="dropdown"><a href="#"><span>
-              Hello! , 
-              <% if(ok.fname) { %> 
-                <%=ok.fname.toUpperCase()%>
-                <% }else { %>
-                  <%=ok.username.substr(0 , 8).toUpperCase()%>
-                  <% } %> 
-            </span> <i class="bi bi-chevron-down"></i></a>
+                  Hello! ,
+                  <% if(ok.fname) { %>
+                    <%=ok.fname.toUpperCase()%>
+                      <% }else { %>
+                        <%=ok.username.substr(0 , 8).toUpperCase()%>
+                          <% } %>
+                </span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                 <li><a href="#"> Contribution : <%=ok.contribution || 0%> </a></li>
-                <li><a class="getstarted scrollto" href="/logout"> LOGOUT </a></li>                                
-              </ul>           
-         <% }else { %>
-            <li><a class="getstarted scrollto" href="/login"> LOGIN </a></li>       
-          <% } %> 
+                <li><a class="getstarted scrollto" href="/logout"> LOGOUT </a></li>
+              </ul>
+              <% }else { %>
+            <li><a class="getstarted scrollto" href="/login"> LOGIN </a></li>
+            <% } %>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
     </div>
-  </header><!-- End Header --> 
+  </header><!-- End Header -->
